fixed css issue on mobile contact page

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
 :root {
   --primary-white: #fff;
   --primary-blue: #2cd7dd;
-  --primary-dark: rgba(255, 255, 255, 0);
+  --primary-dark: #ffffff00;
 }
 
 body {
